# project-euler

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: linting.yaml
Solutions/001/: task.md  task.py
Solutions/002/: task.md  task.py
Solutions/003/: task.py
Solutions/004/: task.md  task.py
Solutions/005/: task.py
Solutions/006/: task.md  task.py
Solutions/007/: task.py
Solutions/008/: task.md  task.py
